# ChessEngine

./: CMakeLists.txt  README.md
Mchess2/: Attacks.ipp  CMakeLists.txt  Constans.h  Constants.h  Macros_and_lib.ipp  MoveGeneration.ipp  PerftDriver.ipp  Prints.h  SearchBeastMove.ipp  Tests.h  UCI.ipp  chess.cpp
